--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -27,7 +28,9 @@
     "clsx": "^2.0.0",
     "encoding": "^0.1.13",
     "firebase": "^10.12.3",
+    "jotai": "^2.8.4",
     "lucide-react": "^0.284.0",
+    "moment-timezone": "^0.5.45",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
