--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@types/node": "latest",
-    "@types/react": "latest",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
     "postcss": "latest",
