--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase": "^10.12.3",
     "jotai": "^2.8.4",
     "lucide-react": "^0.284.0",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "next": "latest",
     "react": "latest",
