--- a/package.json
+++ b/package.json
@@ -1,55 +1,57 @@
 {
-  "name": "syncspot",
-  "description": "Boilerplate & template for Vercel projects using Next.js, Firebase and shadcn/ui.",
-  "author": "Enesien Software <contact@enesien.com> (https://enesien.com)",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@firebase/app": "^0.10.6",
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "encoding": "^0.1.13",
-    "firebase": "^10.12.3",
-    "jotai": "^2.8.4",
-    "lucide-react": "^0.284.0",
-    "moment": "^2.30.1",
-    "moment-timezone": "^0.5.45",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-hook-form": "^7.50.1",
-    "reactfire": "^4.2.3",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/node": "latest",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "latest",
-    "autoprefixer": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest",
-    "typescript": "latest"
-  }
+	"name": "syncspot",
+	"description": "Boilerplate & template for Vercel projects using Next.js, Firebase and shadcn/ui.",
+	"author": "João Nina Matos <joao@minthouse.dev> (https://minthouse.dev)",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@firebase/app": "^0.10.6",
+		"@hookform/resolvers": "^3.3.4",
+		"@radix-ui/react-avatar": "^1.0.4",
+		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-navigation-menu": "^1.1.4",
+		"@radix-ui/react-popover": "^1.1.1",
+		"@radix-ui/react-select": "^2.1.1",
+		"@radix-ui/react-separator": "^1.0.3",
+		"@radix-ui/react-slider": "^1.2.0",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
+		"@radix-ui/react-toast": "^1.1.5",
+		"@radix-ui/react-toggle": "^1.1.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
+		"cmdk": "^1.0.0",
+		"encoding": "^0.1.13",
+		"firebase": "^10.12.3",
+		"jotai": "^2.8.4",
+		"lucide-react": "^0.284.0",
+		"moment": "^2.30.1",
+		"moment-timezone": "^0.5.45",
+		"next": "latest",
+		"react": "latest",
+		"react-dom": "latest",
+		"react-hook-form": "^7.50.1",
+		"reactfire": "^4.2.3",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@types/node": "latest",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "latest",
+		"autoprefixer": "latest",
+		"postcss": "latest",
+		"tailwindcss": "latest",
+		"typescript": "latest"
+	}
 }
