--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"reactfire": "^4.2.3",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.7",
+		"tsconfig-paths": "^4.2.0",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
