--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 		"moment": "^2.30.1",
 		"moment-timezone": "^0.5.45",
 		"next": "latest",
+		"next-transpile-modules": "^10.0.1",
+		"path": "^0.12.7",
 		"react": "latest",
 		"react-dom": "latest",
 		"react-hook-form": "^7.50.1",
