--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"lucide-react": "^0.284.0",
 		"moment": "^2.30.1",
 		"moment-timezone": "^0.5.45",
-		"next": "latest",
+		"next": "^14.2.4",
 		"next-transpile-modules": "^10.0.1",
 		"path": "^0.12.7",
 		"react": "latest",
