--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@types/next": "^9.0.0",
 		"@types/node": "latest",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "latest",
