--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"@radix-ui/react-toast": "^1.1.5",
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"cmdk": "^1.0.0",
@@ -52,11 +54,10 @@
 	"devDependencies": {
 		"@types/next": "^9.0.0",
 		"@types/node": "latest",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "latest",
 		"autoprefixer": "latest",
 		"postcss": "latest",
 		"tailwindcss": "latest",
 		"typescript": "latest"
-	}
+	},
+	"packageManager": "yarn@1.22.21"
 }
